# marvel-rivals-mod-manager

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLEAN-STATE-RECOVERY.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_3.1.0.md  RELEASE_NOTES_3.2.0.md  RELEASE_NOTES_3.2.1.md  RELEASE_NOTES_3.5.0.md  System.Collections.Specialized.OrderedDictionary  TEST-PNPM-EXECUTION.md  TEST-PNPM-FIX.md  TEST-PNPM-PURE.md  WINDOWS-DEBUG-MANUAL.md  WINDOWS-HYBRID-WORKFLOW.md  WINDOWS-REQUIREMENTS.md  debug-dev-windows.bat  debug-dev-windows.ps1  electron-builder.ts  electron.vite.config.ts  fix-dependencies-windows.bat  latest.json  package-lock.json  package.json  pnpm-lock.yaml  start-dev-simple.bat  start-dev-windows.bat  start-dev-windows.ps1  trusted-dependencies-scripts.json  validate.js  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
data/: character_data.json
docs/developer/: costume-sync.md  releases.md
scripts/: README.md  check-version.js  clean-installers.js  copy-build-files.js  download-costume-images.js  generate-icon.js  generate-latest-json.js  package.json  sync-game-assets.js  update-version.js
src/: App.css  App.tsx  background-intensity.css  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/installer/: hooks.nsh
src-tauri/resources/: costume-data.json
src-tauri/src/: archive_extractor.rs  costume_service.rs  file_watcher.rs  lib.rs  main.rs  mod_service.rs  thumbnail_service.rs  types.rs
src/components/: BulkActionStrip.tsx  ChangelogDialog.tsx  ConflictsButton.tsx  DropZone.tsx  ErrorBoundary.tsx  ImageCropDialog.tsx  InitialModSetupDialog.tsx  MetadataDialog.tsx  ModContextMenu.tsx  ModDetailsPanel.tsx  ModList.tsx  ModManager.tsx  ModSelectionDialog.tsx  NexusDiscoverDialog.tsx  NexusDownloadModal.tsx  ProfileDialog.tsx  ProfileItem.tsx  Sidebar.tsx  ThemeProvider.tsx  TitleBar.tsx  Toolbar.tsx  TooltipLayer.tsx  UpdateDialog.tsx  changelog-markdown.tsx
src/hooks/: index.ts  useDominantColor.ts  useFileWatcher.ts  useInstallFromArchive.ts  useMigration.ts  useMods.ts  useNexusMods.ts  useSettings.ts  useSkipIntros.ts  useUpdater.ts
src/lib/: theme-context.ts
src/main/: index.ts
src/preload/: index.ts
src/providers/: QueryProvider.tsx
src/renderer/: globals.css  index.html  index.tsx
src/services/: preferences.ts
src/shared/: constants.ts  profiles.ts  rivals-design.tsx  rivals-tokens.ts  types.ts
usmap/: 5.3.2-3702450+++depot_marvel+S9.0_release-Marvel.usmap
(+69 files in other folders)
