[package]
name = "marvel-rivals-mod-manager"
version = "3.0.0"
description = "Professional mod manager for Marvel Rivals"
authors = ["Marvel Rivals Mod Manager"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "marvel_rivals_mod_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-process = "2"
log = "0.4"
regex = "1.11.1"

# Mod management dependencies
tokio = { version = "1", features = ["full"] }  # Async runtime
notify = "6"                                     # File watching (replaces Chokidar)
zip = "2"                                       # ZIP extraction
sevenz-rust = "0.6"                             # 7z extraction
unrar = "0.5"                                   # RAR extraction (RAR4 and RAR5 support)
reqwest = { version = "0.12", features = ["json", "multipart"] }  # HTTP for NexusMods API
sha2 = "0.10"                                   # Hash generation for mod IDs
walkdir = "2"                                   # Directory traversal
chrono = { version = "0.4", features = ["serde"] }  # Date/time handling
uuid = { version = "1", features = ["v4", "serde"] }  # UUID generation
image = { version = "0.25", features = ["png", "jpeg", "webp"] }  # Image processing for thumbnails

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

# Optimize for smaller binary size in release builds
[profile.release]
codegen-units = 1        # Better LLVM optimization (slower build, smaller binary)
lto = true               # Link-time optimizations
opt-level = "s"          # Optimize for size over speed
panic = "abort"          # Don't include panic unwinding code
strip = true             # Remove debug symbols

